fixed cook time spacing

--- a/responsive-recipe/styles.css
+++ b/responsive-recipe/styles.css
@@ -19,9 +19,17 @@
         font-weight: bold;
     }
 
+    #time {
+        display: flex;
+        text-align: left;
+        padding: 10vw;
+        padding-top: 0;
+        gap: 6vw;
+    }
+
     #time p {
         font-weight: bold;
         font-family: 'Arial', sans-serif;
-        width: 45vw;
-        display: flex;
+        width: 50vw;
+        font-size: 1.5em;
     }
